samples/_failures_safe/1761503734_dcfda6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5385b53c.c: In function ‘main’:
./samples/SAFE/__tmp_5385b53c.c:145:5: error: expected expression at end of input
  145 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_5385b53c.c:145:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_5385b53c.c:45:5: note: declared here
   45 | int addEdge(struct Graph* graph, int src, int dest, int weight) {
      |     ^~~~~~~
./samples/SAFE/__tmp_5385b53c.c:145:5: error: expected declaration or statement at end of input
  145 |     addEdge(graph, 1,
      |     ^~~~~~~
